# whatsapp-rust

./: CALL_AUDIO_EXPERIMENTS.md  CALL_AUDIO_HANDOFF.md  CALL_SETUP_AND_STATUS.md  Cargo.toml
src/: appstate_sync.rs  bot.rs  client.rs  download.rs  history_sync.rs  lib.rs  main.rs  send.rs  usync.rs
src/calls/: handler.rs  manager.rs  protocol_tests.rs  stanza.rs
src/calls/media/: ice_interceptor.rs  mod.rs  sender_subscriptions.rs  srtp.rs  stun.rs  webrtc.rs
src/client/: privacy_tokens.rs
src/features/: contacts.rs  mod.rs  presence.rs  tctoken.rs
src/handlers/: basic.rs  notification.rs
storages/sqlite-storage/migrations/2026-02-12-000000_add_tc_tokens/: down.sql  up.sql
storages/sqlite-storage/src/: schema.rs  sqlite_store.rs
wacore/binary/benches/: binary_benchmark.rs
wacore/binary/src/: decoder.rs  encoder.rs  lib.rs  marshal.rs
wacore/src/: download.rs
wacore/src/iq/: contacts.rs  mod.rs  tctoken.rs
wacore/src/store/: traits.rs
