
[package]
name = "whatsapp-rust"
version = "0.2.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
readme = "README.md"
description = "Rust client for WhatsApp Web"

[workspace]
members = [
    ".",
    "http_clients/ureq-client",
    "storages/sqlite-storage",
    "transports/tokio-transport",
    "wacore",
    "wacore/appstate",
    "wacore/binary",
    "wacore/derive",
    "wacore/libsignal",
    "wacore/noise",
    "waproto",
    "whatsapp-ui",
]

[workspace.dependencies]
# Shared dependencies
aes = "0.8.3"
aes-gcm = { version = "0.10.2", default-features = false, features = [
    "aes",
    "alloc",
    "std",
] }
anyhow = { version = "1.0", default-features = false }
async-channel = { version = "2.5.0", default-features = false }
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.22", default-features = false }
bytes = { version = "1.5", default-features = false, features = ["serde"] }
chrono = { version = "0.4", default-features = false }
ctr = { version = "0.9", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hkdf = { version = "0.12.3", default-features = false }
hmac = { version = "0.12.1", default-features = false, features = ["reset"] }
iai-callgrind = "0.16"
log = "0.4"
prost = { version = "0.14.1", default-features = false, features = ["std"] }
prost-build = { version = "0.14.1", default-features = false }
rand = "0.9"
rand_core = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }

# Internal workspace crates
wacore = { path = "./wacore", version = "0.2.0" }
wacore-appstate = { path = "./wacore/appstate", version = "0.2.0" }
wacore-binary = { path = "./wacore/binary", version = "0.2.0" }
wacore-derive = { path = "./wacore/derive", version = "0.2.0" }
wacore-libsignal = { path = "./wacore/libsignal", version = "0.2.0" }
wacore-noise = { path = "./wacore/noise", version = "0.2.0" }
waproto = { path = "./waproto", version = "0.2.0" }

[features]
debug-snapshots = []
danger-skip-tls-verify = ["whatsapp-rust-tokio-transport?/danger-skip-tls-verify"]
default = ["sqlite-storage", "tokio-transport", "ureq-client", "tokio-native"]
ureq-client = ["dep:whatsapp-rust-ureq-http-client"]
tokio-transport = ["dep:whatsapp-rust-tokio-transport"]
signal = ["tokio/signal"]
sqlite-storage = ["whatsapp-rust-sqlite-storage"]
tokio-native = ["tokio/rt-multi-thread"]

[dependencies]
aes = "0.8.4"
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
crc = "3.4.0"
ctr = "0.9.2"
dashmap = "6.1.0"
env_logger = { version = "0.11", default-features = false }
futures = "0.3.31"
hex = { workspace = true }
hkdf = { workspace = true }
hmac = "0.12.1"
log = { workspace = true }
moka = { version = "0.12.12", features = ["future"] }
opus = "0.3"
prost = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
regex = "1.11"
scopeguard = "1.2"
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
sha1 = "0.10.6"
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
wacore = { workspace = true }
wacore-binary = { workspace = true }
waproto = { workspace = true }

# WebRTC for call media transport
webrtc = "0.14.0"
whatsapp-rust-sqlite-storage = { path = "./storages/sqlite-storage", version = "0.2.0", optional = true }
whatsapp-rust-tokio-transport = { path = "./transports/tokio-transport", version = "0.2.0", optional = true }
whatsapp-rust-ureq-http-client = { path = "./http_clients/ureq-client", version = "0.2.0", optional = true }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[[example]]
name = "benchmark"
required-features = ["danger-skip-tls-verify"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

# Benchmark profile: optimized but without aggressive LTO that breaks iai-callgrind
[profile.bench]
inherits = "release"
lto = "thin"
debug = 1
strip = false

# Profiling profile: optimized with debug symbols for heaptrack/valgrind
[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = false
opt-level = 2

[patch.crates-io]
gpui = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component.git" }

[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "gpui" }
collections = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "collections" }
util = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "util" }
util_macros = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "util_macros" }
sum_tree = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "sum_tree" }
refineable = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "refineable" }
derive_refineable = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "derive_refineable" }
gpui_macros = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "gpui_macros" }
http_client = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "http_client" }
perf = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "perf" }
zlog = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "zlog" }
ztracing = { git = "https://github.com/jlucaso1/zed.git", branch = "gpui-yuv-surface-linux-windows", package = "ztracing" }
